--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,2 +1,3 @@
-add_library(utils STATIC camera.cpp mesh_manager.cpp shader_manager.cpp)
+add_library(utils STATIC camera.cpp mesh_manager.cpp shader_manager.cpp texture_manager.cpp)
 target_include_directories(utils PUBLIC "${PROJECT_SOURCE_DIR}/include")
+target_include_directories(utils PUBLIC "${PROJECT_SOURCE_DIR}/lib/SOIL")
